2005-04-25  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in.in: Syncronize with ../config.h.in file.
	Added: #undef HAVE_DECL_MEMRCHR, #undef HAVE_PAM_PAM_APPL_H,
	#undef HAVE_SECURITY_PAM_APPL_H
	* config.h, config.h.in: Regenerated.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.am, stdint.h: Updated from GNULIB.
	* Makefile.in: Regenerated.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* filesubr.c (open_file): Remove this function.

2005-03-09  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Remove mkconfig & fix-msvc-mak.
	* Makefile.am (EXTRA_DIST): Include mkconfig.pl & fix-msvc-mak.pl.
	(stamp-chi): Call $(PERL) mkconfig.pl explicitly.
	* plhead.pl: Remove this file.
	* mkconfig.pl, fix-msvc-mak.pl: Turn on warnings.

2005-03-07  Conrad T. Pino  <Conrad@Pino.com>

	* config.h, config.h.in: Regenerate for config.h.in.in change.

2005-03-07  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.in: Synchronize with ../config.h.in file.
	Removed:
		#define HAVE_GETCWD 1
		#define HAVE_GETCWD_NULL 1
		#undef HAVE_MKDIR
		#undef HAVE_RENAME
		#undef HAVE_VALLOC
	Added:
		#undef D_INO_IN_DIRENT
		#undef HAVE_CFLOCALECOPYCURRENT
		#undef HAVE_CFPREFERENCESCOPYAPPVALUE
		#define HAVE_CHSIZE 1
		#define HAVE_DECL___FPENDING 0
		#define HAVE_DECL_GETCWD 1
		#define HAVE_ISWPRINT 1
		#undef HAVE_MAP_ANONYMOUS
		#define HAVE_MBRTOWC 1
		#undef HAVE_MBSINIT
		#undef HAVE_MEMRCHR
		#undef HAVE_NANOTIME
		#undef HAVE_OPENAT
		#undef HAVE_PARTLY_WORKING_GETCWD
		#undef HAVE_POSIX_MEMALIGN
		#define HAVE_STRTOL 1
		#undef HAVE___FPENDING
		#undef MAP_ANONYMOUS
		#define PENDING_OUTPUT_N_BYTES ( fp ? fp->_ptr - fp->_base : 0 )
		#undef RENAME_TRAILING_SLASH_BUG
		#undef __GETCWD_PREFIX
		#undef __OPENAT_PREFIX
		#undef mkdir
		#undef rename
	Changed:
		#undef HAVE_WCHAR_H replaced with #define HAVE_WCHAR_H 1
		#undef HAVE_WCHAR_T replaced with #define HAVE_WCHAR_T 1

2005-03-01  Derek Price  <derek@ximbiot.com>
