@@ -1,3 +1,7 @@
+2005-05-02  Derek Price  <derek@ximbiot.com>
+
+	* config.h.in.in: Define LOCK_COMPATIBILITY.
+
 2005-04-25  Mark D. Baushke  <mdb@cvshome.org>
 
 	* config.h.in.in: Syncronize with ../config.h.in file.
